--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,7 +8,25 @@ html *{
 }
 
 body{
-	background-color: hsl(241,78%,83%);
+	background-color: hsl(193,100%,93%);
+}
+
+.title{
+	position: fixed;
+	text-align: center;
+	width: 100%;
+	top: 0px;
+	padding: 0.75rem;
+	background: linear-gradient(to left, hsl(193,100%,29%), hsl(193,100%,41%));
+	box-shadow: 0px 1px 8px 1px black;
+}
+
+.template{
+	max-width: 1000px;
+	margin-top: 5rem;
+	background-color: #FFF;
+	padding: 1rem;
+	border: 1px solid;
 }
 
 li{
@@ -27,50 +45,11 @@ h3{
 	font-size: 1.25rem;
 }
 
-.template{
-	margin-botton: 1rem;
-	max-width: 1000px;
-	margin-top: 1rem;
-}
-
-.text-center{
-	text-align: center;
-}
-
-.title{
-	font-size: 3.5rem;
-	width: 100%;
-	font-family: "Londrina Shadow";
-	padding: 0.25rem 1.5rem;
-	text-align: left;
-	background: linear-gradient(to right, hsl(241,33%,13%), hsl(241,33%,13%), hsl(241,90%,77%));
-	color: hsl(241,90%,77%);
-	letter-spacing: 4px;
-}
-
-
-.col-thin{
-	width: 33%;
-	display: inline-block;
-	float: right;
-	padding: 0rem 1rem;
-}
-
-.col-wide{
-	width: 66%;
-	display: inline-block;
-	float: left;
-	padding: 0rem 0rem 0rem 1rem;
-}
 
 .box{
 	padding: 1rem;
 	width: 100%;
 	border-radius: 8px;
-}
-
-.profile-box{
-	margin-bottom: 1rem;
 }
 
 .form-box{
@@ -93,10 +72,6 @@ input{
     padding: 0.2rem;
     margin: 0.4rem auto;
     display: block;
-}
-
-input[type="radio"]{
-	display: inline-block;
 }
 
 .tabs{
@@ -123,91 +98,4 @@ input[type="radio"]{
 .button{
 	border-style: none;
 	border-radius: 8px;
-}
-
-.list-item{
-	width: 100%;
-	padding: 0.3rem;
-	margin-top: 0.2rem;
-	border-radius: 8px;
-}
-
-.list-item-1{
-	background-color: hsl(322, 60%, 90%);
-	color: black;
-}
-
-.list-item-2{
-	background-color: hsl(322, 60%, 80%);
-	color: black;
-}
-
-.list-item-3{
-	background-color: hsl(322, 60%, 65%);
-	color: black;
-}
-
-.list-item-4{
-	background-color: hsl(322, 60%, 45%);
-	color: black;
-}
-
-.list-item-checked{
-	background-color: hsl(100, 0%, 33%);
-	color: hsl(100, 0%, 55%);
-}
-
-.list-item-1:hover{
-	background-color: hsl(241, 60%, 90%);
-	color: black;
-	transition: background-color 0.5s;
-}
-
-.list-item-2:hover{
-	background-color: hsl(241, 60%, 80%);
-	color: black;
-	transition: background-color 0.5s;
-}
-
-.list-item-3:hover{
-	background-color: hsl(241, 60%, 65%);
-	color: black;
-	transition: background-color 0.5s;
-}
-
-.list-item-4:hover{
-	background-color: hsl(241, 50%,55%);
-	color: black;
-	transition: background-color 0.5s;
-}
-
-.list-item-checked:hover{
-	background-color: hsl(100, 0%, 43%);
-	color: hsl(100, 0%, 55%);
-	transition: background-color 0.5s;
-}
-
-.inline-form{
-	display: inline-block;
-}
-
-@media screen and (max-width: 500px){
-
-	.box{
-		border-radius: 0px;
-	}
-
-	.col-wide{
-		float: right;
-		padding: 0rem;
-		margin: 0rem;
-		width: 100%;
-	}
-
-	.col-thin{
-		float: left;
-		padding: 0rem;
-		margin: 0rem;
-		width: 100%;
-	}
 }
