--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -21,6 +21,14 @@ body{
 	box-shadow: 0px 1px 8px 1px black;
 }
 
+.title *{
+	display: inline-block;
+}
+
+.title form{
+	float: right;
+}
+
 .template{
 	max-width: 1000px;
 	margin-top: 5rem;
